feat: fixed some issue

--- a/pages/footer other pages/privacypolicy.html
+++ b/pages/footer other pages/privacypolicy.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
-	<div class="visit-signin">
+	<div class="visit-signin" style="display: none;">
 
 		<div class="visit-global">
 			<p>	Visit global1.com</p>
@@ -62,7 +62,7 @@
 <a href="../../index.html" >
 <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
-   	 <nav class="navbar">
+   	 <nav class="navbar" style="display: none;">
 	 <ul>
      <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
@@ -78,7 +78,7 @@
 	 </nav>
 
      <div>
-		<a href="../../pages/other pages/booknow.html"><button> <b style="color: white;">  BOOK NOW </b> </button> </a>
+		<a href="../../pages/other pages/booknow.html" style="display: none;"><button> <b style="color: white;">  BOOK NOW </b> </button> </a>
 </div>
 
 </div>
