--- a/pages/shop/accessories_product.html
+++ b/pages/shop/accessories_product.html
@@ -39,7 +39,7 @@
 
 <div class="icons-info">
 	<a href="../../pages/signup for shopping/signup_shop.html"> <i class="fa-solid fa-user"></i> &nbsp; Sign In | Sign Up </a> &nbsp;
-	<a href=""> <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist (2)</a> &nbsp;
+	<a href="../../pages/shop/wishlist.html"> <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist (2)</a> &nbsp;
 	<a href="../../pages/shop/cart.html"> <i class="fa-solid fa-bag-shopping"></i> &nbsp; My Bag (2)</a>
 </div>
 </div>
@@ -195,7 +195,7 @@ data.product_uuid === productUniqueID );
 
 // create div element for the photo of the store
 
-//for(let i=0; i<accessories_details.length; i++){        
+     
 const photoDiv = document.createElement('div');
 photoDiv.setAttribute('class', 'photo-of-store');
 
