--- a/pages/shop/home.html
+++ b/pages/shop/home.html
@@ -38,7 +38,7 @@
 
 <div class="icons-info">
 	<a href="../../pages/signup for shopping/signup_shop.html"> <i class="fa-solid fa-user"></i> &nbsp; Sign In | Sign Up </a> &nbsp;
-	<a href=""> <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist (2)</a> &nbsp;
+	<a href="../../pages/shop/wishlist.html"> <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist (2)</a> &nbsp;
 	<a href="../../pages/shop/cart.html"> <i class="fa-solid fa-bag-shopping"></i> &nbsp; My Bag (2)</a>
 </div>
 </div>
