--- a/admin/admin html/attractions/attractions-upload.html
+++ b/admin/admin html/attractions/attractions-upload.html
@@ -56,6 +56,28 @@
 
     </section>
 
+    <table class="attraction_show" style="position: relative; top: 180px; padding: 50px;
+    width: 1300px;">
+        <tbody>
+            <tr>
+                <th id="photo">Attraction Photo</th>
+                <th id="name">Attraction Name</th>
+                <th id="option">Options</th>
+                <th id="publish_id">Publish</th>
+            </tr>
+
+            <tr>
+                <th id="image"><img src="../../../assets/images/globalfuncitylogo.png" width="180px" alt="logo"/> </th>
+                <th id="name">QWERTYU</th>
+                <th id="options_main"> <button id="edit">EDIT</button><br>
+                    <button id="remove">REMOVE</button><br>
+                </th>
+                <th id="publish_btn"><button id="publish">PUBLISH</button></th>
+
+            </tr>
+        </tbody>
+    </table>
+
     <script>
         document.getElementById("save_details").addEventListener("click",
 
@@ -95,6 +117,8 @@
                 }
             }
         );
+
+
     </script>
     <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
 
