--- a/pages/other pages/contact.html
+++ b/pages/other pages/contact.html
@@ -73,7 +73,7 @@ info@globalfuncity.com
 
 <div class="gape">
 	<div class="part1">
-	<form role="form" class="contact-admin" onsubmit="contactFormData(event);">
+	<form role="form" class="contact-admin" onsubmit="contactFormData(event)">
 	<i class="fa-solid fa-user"> <input class="input-field-for-contact" id="name" type="text" placeholder="Name" required pattern="[a-zA-Z]+"/> </i> &nbsp;
 	<i class="fa-solid fa-phone"> <input class="input-field-for-contact" id="phone" type="tel" placeholder="Phone" required pattern="[0-9]{10}"/> </i>
 	</div>
@@ -85,6 +85,7 @@ info@globalfuncity.com
 		<i class="fa-solid fa-pen"><input class="input-field-for-contact" id="message" type="text" placeholder="How can I help you? Feel free to get in touch!" required/> </i>
     </div>
 </div>
+</form>
 </section>
 
 <button class="get-in-touch" id="getInTouchBtn" type="submit"> <i class="fa-regular fa-paper-plane"></i> &nbsp;Get in touch </button>
